# unison

./: .gitignore  INSTALL.md  Makefile  dune-project  unison.opam
.github/workflows/: CI.yml  CICD.yml  manual_build.yml
doc/: Makefile  docs.ml  unison-manual.tex
po/: Makefile  POTFILES  README.md  it.po  unison.pot
src/: .depend  Makefile  Makefile.OCaml  abort.ml  bytearray.ml  bytearray_stubs.c  case.ml  clroot.ml  common.ml  common.mli  compat.ml  compat.mli  copy.ml  copy.mli  copy_stubs.c  dune  external.ml  features.ml  fileinfo.ml  fileinfo.mli  files.ml  files.mli  fingerprint.ml  fingerprint.mli  fpcache.ml  fpcache.mli  fs.ml  fspath.ml  fspath.mli  fstype_stubs.c  fswatch.ml  globals.ml  hash.ml  hash.mli  lock.ml  main.ml  make_tools.ml  moves.ml  name.ml  os.ml  (+30 more)
src/fsmonitor/: watchercommon.ml
src/fsmonitor/inotify/: Makefile  dune  inotify_stubs.c  lwt_inotify.ml  lwt_inotify.mli  watcher.ml
src/fsmonitor/linux/: inotify.ml  inotify.mli  inotify_stubs.c  lwt_inotify.ml  lwt_inotify.mli  watcher.ml
src/fsmonitor/solaris/: dune  watcher.ml
src/fsmonitor/windows/: Makefile  watcher.ml
src/lwt/: lwt_unix_stubs.c
src/lwt/win/: lwt_unix_impl.ml
src/system/: system_generic.ml  system_intf.ml  system_win.ml  system_win_stubs.c
src/system/win/: system_impl.ml
src/ubase/: prefs.ml  trace.ml  uarg.ml  util.ml
src/ugettext/: dune  ugettext_dummy.ml  ugettext_dummy.mli  ugettext_intf.ml  ugettext_ocaml.ml  ugettext_ocaml.mli  ugettext_sys.ml  ugettext_sys.mli
src/uimac/uimacnew.xcodeproj/: project.pbxproj
